--- a/SimpleEngineWithSDL/shooter/shooter.vcxproj
+++ b/SimpleEngineWithSDL/shooter/shooter.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="src\log.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\renderer.cpp" />
+    <ClCompile Include="src\texture.cpp" />
     <ClCompile Include="src\timer.cpp" />
     <ClCompile Include="src\vector2.cpp" />
     <ClCompile Include="src\window.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="src\log.h" />
     <ClInclude Include="src\rectangle.h" />
     <ClInclude Include="src\renderer.h" />
+    <ClInclude Include="src\texture.h" />
     <ClInclude Include="src\timer.h" />
     <ClInclude Include="src\vector2.h" />
     <ClInclude Include="src\window.h" />
