--- a/SimpleEngineWithSDL/shooter/shooter.vcxproj
+++ b/SimpleEngineWithSDL/shooter/shooter.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="maths.h" />
     <ClInclude Include="src\actor.h" />
     <ClInclude Include="src\assets.h" />
     <ClInclude Include="src\component.h" />
