--- a/SimpleEngineWithSDL/shooter/shooter.vcxproj
+++ b/SimpleEngineWithSDL/shooter/shooter.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\log.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\rectangle.cpp" />
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\texture.cpp" />
     <ClCompile Include="src\timer.cpp" />
