--- a/SimpleEngineWithSDL/shooter/shooter.vcxproj.filters
+++ b/SimpleEngineWithSDL/shooter/shooter.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\assets.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="src\rectangle.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\log.h">
