--- a/SimpleEngineWithSDL/shooter/shooter.vcxproj
+++ b/SimpleEngineWithSDL/shooter/shooter.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\rectangle.cpp" />
     <ClCompile Include="src\renderer.cpp" />
+    <ClCompile Include="src\spriteComponent.cpp" />
     <ClCompile Include="src\texture.cpp" />
     <ClCompile Include="src\timer.cpp" />
     <ClCompile Include="src\vector2.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="src\log.h" />
     <ClInclude Include="src\rectangle.h" />
     <ClInclude Include="src\renderer.h" />
+    <ClInclude Include="src\spriteComponent.h" />
     <ClInclude Include="src\texture.h" />
     <ClInclude Include="src\timer.h" />
     <ClInclude Include="src\vector2.h" />
