--- a/SimpleEngineWithSDL/shooter/shooter.vcxproj
+++ b/SimpleEngineWithSDL/shooter/shooter.vcxproj
@@ -146,6 +146,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\actor.cpp" />
+    <ClCompile Include="src\animSpriteComponent.cpp" />
     <ClCompile Include="src\assets.cpp" />
     <ClCompile Include="src\component.cpp" />
     <ClCompile Include="src\game.cpp" />
@@ -162,6 +163,7 @@
   <ItemGroup>
     <ClInclude Include="maths.h" />
     <ClInclude Include="src\actor.h" />
+    <ClInclude Include="src\animSpriteComponent.h" />
     <ClInclude Include="src\assets.h" />
     <ClInclude Include="src\component.h" />
     <ClInclude Include="src\game.h" />
