--- a/SimpleEngineWithSDL/shooter/shooter.vcxproj
+++ b/SimpleEngineWithSDL/shooter/shooter.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="src\actor.cpp" />
     <ClCompile Include="src\animSpriteComponent.cpp" />
     <ClCompile Include="src\assets.cpp" />
+    <ClCompile Include="src\astroid.cpp" />
     <ClCompile Include="src\backgrounSpriteComponent.cpp" />
     <ClCompile Include="src\component.cpp" />
     <ClCompile Include="src\game.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="src\actor.h" />
     <ClInclude Include="src\animSpriteComponent.h" />
     <ClInclude Include="src\assets.h" />
+    <ClInclude Include="src\astroid.h" />
     <ClInclude Include="src\backgroundSpriteComponent.h" />
     <ClInclude Include="src\component.h" />
     <ClInclude Include="src\game.h" />
