feat(class InputComponent): Create InputComponent class

--- a/SimpleEngineWithSDL/shooter/shooter.vcxproj
+++ b/SimpleEngineWithSDL/shooter/shooter.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="src\backgrounSpriteComponent.cpp" />
     <ClCompile Include="src\component.cpp" />
     <ClCompile Include="src\game.cpp" />
+    <ClCompile Include="src\inputComponent.cpp" />
     <ClCompile Include="src\log.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\moveComponent.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="src\backgroundSpriteComponent.h" />
     <ClInclude Include="src\component.h" />
     <ClInclude Include="src\game.h" />
+    <ClInclude Include="src\inputComponent.h" />
     <ClInclude Include="src\log.h" />
     <ClInclude Include="src\moveComponent.h" />
     <ClInclude Include="src\random.h" />
