--- a/SimpleEngineWithSDL/shooter/shooter.vcxproj
+++ b/SimpleEngineWithSDL/shooter/shooter.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="src\random.cpp" />
     <ClCompile Include="src\rectangle.cpp" />
     <ClCompile Include="src\renderer.cpp" />
+    <ClCompile Include="src\ship.cpp" />
     <ClCompile Include="src\spriteComponent.cpp" />
     <ClCompile Include="src\texture.cpp" />
     <ClCompile Include="src\timer.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="src\random.h" />
     <ClInclude Include="src\rectangle.h" />
     <ClInclude Include="src\renderer.h" />
+    <ClInclude Include="src\ship.h" />
     <ClInclude Include="src\spriteComponent.h" />
     <ClInclude Include="src\texture.h" />
     <ClInclude Include="src\timer.h" />
